--- a/talk.html
+++ b/talk.html
@@ -141,6 +141,34 @@ Mine Çetinkaya-Rundel
   <p class="date">2025-01-16</p>
 </section>
 <section>
+<section id="reproducible-data-analysis" class="title-slide slide level1 center">
+<h1>Reproducible data analysis</h1>
+
+</section>
+<section id="reproducibility-checklist" class="slide level2 smaller">
+<h2>Reproducibility checklist</h2>
+<div class="callout callout-note no-icon callout-style-simple">
+<div class="callout-body">
+<div class="callout-content">
+<p>What does it mean for a data analysis to be “reproducible”?</p>
+</div>
+</div>
+</div>
+<div class="fragment">
+<p><strong>Bare minimum:</strong></p>
+<ul>
+<li><p>Are the tables and figures reproducible from the code and data?</p></li>
+<li><p>Does the code actually do what you think it does?</p></li>
+<li><p>In addition to what was done, is it clear <em>why</em> it was done?</p></li>
+</ul>
+<p><strong>A bit more ambitious:</strong></p>
+<ul>
+<li><p>Can the code be used for other data?</p></li>
+<li><p>Can you extend the code to do other things?</p></li>
+</ul>
+</div>
+</section></section>
+<section>
 <section id="what-is-quarto" class="title-slide slide level1 center">
 <h1>What is Quarto?</h1>
 
